# kattis-python-loader

./: README.md  main.py  pyproject.toml
